Fix topbar alignment

--- a/src/styles/custom/_all.scss
+++ b/src/styles/custom/_all.scss
@@ -24,6 +24,7 @@
 
 .topbar .topbar-logo .topbar-logo-image {
 	height: 28px;
+	margin: 4px 0;
 }
 
 .topbar-link {
